Home.jsx UI Updated

--- a/frontend/src/styles/Form.css
+++ b/frontend/src/styles/Form.css
@@ -10,7 +10,7 @@
 form {
   background-color: #ffffff;
   border-radius: 20px;
-  border: 1px solid #033f63;
+  border: 1px solid #e43228;
   padding: 2rem;
   width: 100%;
   max-width: 400px;
