--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -32,7 +32,7 @@
   display: flex;
   justify-content: center;
   width: 400px;
-  background-color: white;
+  background-color: #f5f5f5;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   border: 1px solid #033f63;
